--- a/cookbooks/kylin_manage/templates/default/chefClients.template
+++ b/cookbooks/kylin_manage/templates/default/chefClients.template
@@ -300,6 +300,30 @@
                 "CidrIp": "10.0.0.0/16"
             }
         },
+        "SecurityGroupRulekya": {
+            "Type": "AWS::EC2::SecurityGroupIngress",
+            "Properties": {
+                "GroupId": {
+                    "Ref": "VpcSecurityGroup"
+                },
+                "IpProtocol": "tcp",
+                "FromPort": 8080,
+                "ToPort": 8080,
+                "CidrIp": "10.0.0.0/16"
+            }
+        },
+        "SecurityGroupRulezep": {
+            "Type": "AWS::EC2::SecurityGroupIngress",
+            "Properties": {
+                "GroupId": {
+                    "Ref": "VpcSecurityGroup"
+                },
+                "IpProtocol": "tcp",
+                "FromPort": 9090,
+                "ToPort": 9090,
+                "CidrIp": "10.0.0.0/16"
+            }
+        },
         "ChefClientUser": {
             "Type": "AWS::IAM::User",
             "Properties": {
@@ -725,6 +749,18 @@
                         "IpProtocol": "tcp",
                         "ToPort": {"Ref": "InstancePort"},
                         "FromPort": {"Ref": "InstancePort"},
+                        "CidrIp": "0.0.0.0/0"
+                    },
+                    {
+                        "IpProtocol": "tcp",
+                        "ToPort": 9090,
+                        "FromPort": 9090,
+                        "CidrIp": "0.0.0.0/0"
+                    },
+                    {
+                        "IpProtocol": "tcp",
+                        "ToPort": 8080,
+                        "FromPort": 8080,
                         "CidrIp": "0.0.0.0/0"
                     }
                 ],
