--- a/cookbooks/kap/templates/default/aws_chefServer.template
+++ b/cookbooks/kap/templates/default/aws_chefServer.template
@@ -457,6 +457,35 @@
                 "mode": "000400",
                 "owner": "root",
                 "group": "root"
+              },
+              "/etc/chef/emrconfig.json": {
+                  "content": {
+                      "Fn::Join": [
+                          "",
+                          [
+                              "{\n",
+                              "  \"Classification\": \"hbase-site\",\n",
+                              "  \"Properties\": {\n",
+                              "    \"hbase.rootdir\": \"s3://",
+                              {
+                                  "Ref": "PrivateKeyBucket"
+                              },
+                              "/EMRROOT\"",
+                              "  }",
+                              "},",
+                              "{\n",
+                              "  \"Classification\": \"hbase\",\n",
+                              "  \"Properties\": {\n",
+                              "    \"hbase.emr.storageMode\": \"s3\"",
+                              "  }",
+                              "}\n",
+                              ""
+                          ]
+                      ]
+                  },
+                  "mode": "000644",
+                  "group": "root",
+                  "owner": "root"
               }
             },
             "commands": {
