Adding zeppelin and kyanalyzer ports into listener

--- a/cookbooks/kylin_manage/templates/default/chefClients.template
+++ b/cookbooks/kylin_manage/templates/default/chefClients.template
@@ -785,6 +785,16 @@
                             "Ref": "InstancePort"
                         },
                         "Protocol": "TCP"
+                    },
+                    {
+                        "LoadBalancerPort": 9090,
+                        "InstancePort": 9090,
+                        "Protocol": "TCP"
+                    },
+                    {
+                        "LoadBalancerPort": 8080,
+                        "InstancePort": 8080,
+                        "Protocol": "TCP"
                     }
                 ],
                 "SecurityGroups": [
