Usign new parameter Hbase.meta.startup.refresh

--- a/cookbooks/kap/templates/default/aws_chefServer.template
+++ b/cookbooks/kap/templates/default/aws_chefServer.template
@@ -477,7 +477,8 @@
                               "  {\n",
                               "    \"Classification\": \"hbase\",\n",
                               "    \"Properties\": {\n",
-                              "      \"hbase.emr.storageMode\": \"s3\"\n",
+                              "      \"hbase.emr.storageMode\": \"s3\",\n",
+                              "      \"Hbase.meta.startup.refresh\": true\n",
                               "    }\n",
                               "  }\n",
                               "]",
