Revert "Usign new parameter Hbase.meta.startup.refresh"
This reverts commit b4cc3245b061f922e95fe7290222c3f5e8c70bf7.

--- a/cookbooks/kap/templates/default/aws_chefServer.template
+++ b/cookbooks/kap/templates/default/aws_chefServer.template
@@ -477,8 +477,7 @@
                               "  {\n",
                               "    \"Classification\": \"hbase\",\n",
                               "    \"Properties\": {\n",
-                              "      \"hbase.emr.storageMode\": \"s3\",\n",
-                              "      \"Hbase.meta.startup.refresh\": true\n",
+                              "      \"hbase.emr.storageMode\": \"s3\"\n",
                               "    }\n",
                               "  }\n",
                               "]",
