--- a/cookbooks/kap/templates/default/aws_chefServer.template
+++ b/cookbooks/kap/templates/default/aws_chefServer.template
@@ -749,11 +749,15 @@
                       "\\[",
                       ":s3location",
                       "\\]",
-                      " =.*/default[:kylin][:s3location] =\"s3:\\\\\\\/\\\\\\\/",
+                      " =.*/default[:kylin][:s3location] =",
+                      "\\'",
+                      "s3:\\\\\\\/\\\\\\\/",
                       {
                         "Ref": "PrivateKeyBucket"
                       },
-                      "\\\\\\\/kylin\"/' /home/ec2-user/chef11/chef-repo/cookbooks/kylin/attributes/default.rb"
+                      "\\\\\\\/kylin",
+                      "\\s'",
+                      "/' /home/ec2-user/chef11/chef-repo/cookbooks/kylin/attributes/default.rb"
                     ]
                   ]
                 }
