Removing one escape character of s3 url

--- a/cookbooks/kap/templates/default/aws_chefServer.template
+++ b/cookbooks/kap/templates/default/aws_chefServer.template
@@ -752,11 +752,11 @@
                       " =.*/default[:kylin][:s3location] = ",
                       "\\",
                       "x27",
-                      "s3:\\\\\\\/\\\\\\\/",
+                      "s3:\\\/\\\/",
                       {
                         "Ref": "PrivateKeyBucket"
                       },
-                      "\\\\\\\/kylin",
+                      "\\\/kylin",
                       "\\",
                       "x27",
                       "/' /home/ec2-user/chef11/chef-repo/cookbooks/kylin/attributes/default.rb"
