--- a/cookbooks/kylin_manage/templates/default/chefClients.template
+++ b/cookbooks/kylin_manage/templates/default/chefClients.template
@@ -865,7 +865,7 @@
                                     {
                                         "Ref": "ProjectPrefix"
                                     },
-                                    "ChefClient"
+                                    "-KylinServer"
                                 ]
                             ]
                         },
