Revert "Removing tagging for chef server"
This reverts commit dfbd00c0f167c124091adde23c49c0d576d4aa66.

--- a/cookbooks/kap/templates/default/aws_chefServer.template
+++ b/cookbooks/kap/templates/default/aws_chefServer.template
@@ -881,7 +881,19 @@
         },
         "SubnetId": {
           "Ref": "ChefSubnet"
-        }
+        },
+        "Tags": [
+          {
+            "Key": "Name",
+            "Value": {
+              "Ref": "ServerTagName"
+            }
+          },
+          {
+            "Key": "Environment",
+            "Value": "cloudformationChefenv"
+          }
+        ]
       }
     },
     "ChefServerUser": {
