Updating chefclient creation choice for download packages

--- a/cookbooks/kylin_manage/templates/default/chefClients.template
+++ b/cookbooks/kylin_manage/templates/default/chefClients.template
@@ -92,9 +92,21 @@
         "StackName":{
           "Description": "Stack name of chef server",
           "Type": "String"
+        },
+        "AccountRegion":{
+          "Description": "Make condition to decide where to download package",
+          "Type": "String"
         }
     },
     "Conditions": {
+        "CheckAccountRegion": {
+          "Fn::Equals": [
+              {
+                  "Ref": "AccountRegion"
+              },
+              "china"
+          ]
+        },
         "CheckInstanceForInstanceStore": {
             "Fn::Or": [
                 {
@@ -571,8 +583,20 @@
                                 "command": "/usr/bin/gem sources --add https://gems.ruby-china.org --remove https://rubygems.org",
                                 "cwd": "/home/ec2-user"
                             },
+                            "08downloadchefclient": {
+                                "command": [
+                                    {
+                                        "Fn::If": [
+                                            "CheckAccountRegion",
+                                            "wget -O ./chef-12.21.3-1.el6.x86_64.rpm https://kyhub.blob.core.chinacloudapi.cn/packages/chef/chef-12.21.3-1.el6.x86_64.rpm",
+                                            "wget -O ./chef-12.21.3-1.el6.x86_64.rpm https://s3-ap-northeast-1.amazonaws.com/chefpackages/chef-12.21.3-1.el6.x86_64.rpm"
+                                        ]
+                                    }
+                                ],
+                                "cwd": "/home/ec2-user/tools"
+                            },
                             "09installchefclient": {
-                                "command": "wget -O ./chef-12.21.3-1.el6.x86_64.rpm https://kyhub.blob.core.chinacloudapi.cn/packages/chef/chef-12.21.3-1.el6.x86_64.rpm;rpm -ivh /home/ec2-user/tools/chef-12.21.3-1.el6.x86_64.rpm",
+                                "command": "rpm -ivh /home/ec2-user/tools/chef-12.21.3-1.el6.x86_64.rpm",
                                 "cwd": "/home/ec2-user/tools"
                             },
                             "10installec2metadata": {
