--- a/cookbooks/kylin_manage/templates/default/chefClients.template
+++ b/cookbooks/kylin_manage/templates/default/chefClients.template
@@ -104,7 +104,7 @@
         {
           "Ref": "AccountRegion"
         },
-        "china"
+        "global"
       ]
     },
     "CheckInstanceForInstanceStore": {
