use root to backup kap

--- a/cookbooks/kylin_manage/templates/default/chefClients.template
+++ b/cookbooks/kylin_manage/templates/default/chefClients.template
@@ -527,7 +527,7 @@
                       {
                         "Ref": "ChefServerPrivateKeyBucket"
                       },
-                      "/kap --recursive --quiet"
+                      "/kap --recursive --only-show-errors"
                     ]
                   ]
                 },
