if china use china source, if global use global source

--- a/cookbooks/kylin_manage/templates/default/chefClients.template
+++ b/cookbooks/kylin_manage/templates/default/chefClients.template
@@ -602,7 +602,13 @@
                 "cwd": "/home/ec2-user"
               },
               "06updategemtochina": {
-                "command": "/usr/bin/gem sources --add https://gems.ruby-china.org --remove https://rubygems.org",
+                "command":{
+                  "Fn::If":[
+                    "CheckAccountRegion",
+                    "/usr/bin/gem sources --add https://rubygems.org --remove https://gems.ruby-china.org",
+                    "/usr/bin/gem sources --add https://gems.ruby-china.org --remove https://rubygems.org"
+                  ]
+                },
                 "cwd": "/home/ec2-user"
               },
               "08downloadchefclient": {
