Update EC2's template AMI IDs

--- a/cookbooks/kylin_manage/templates/default/chefClients.template
+++ b/cookbooks/kylin_manage/templates/default/chefClients.template
@@ -243,59 +243,71 @@
     },
     "AWSRegionArch2AMI": {
       "us-east-1": {
-        "PVinstancestore": "ami-971066f2",
-        "PVebs": "ami-cf1066aa",
-        "HVMebs": "ami-e3106686"
+        "PVinstancestore": "ami-44c0ea52",
+        "PVebs": "ami-abc1ebbd",
+        "HVMebs": "ami-a4c7edb2"
+      },
+      "us-east-2": {
+        "PVinstancestore": "ami-d07657b5",
+        "PVebs": "ami-8a7859ef",
+        "HVMebs": "ami-8a7859ef"
       },
       "us-west-2": {
-        "PVinstancestore": "ami-bdf7e88d",
-        "PVebs": "ami-81f7e8b1",
-        "HVMebs": "ami-9ff7e8af"
+        "PVinstancestore": "ami-2ff3e756",
+        "PVebs": "ami-98f3e7e1",
+        "HVMebs": "ami-6df1e514"
       },
       "us-west-1": {
-        "PVinstancestore": "ami-c93aff8d",
-        "PVebs": "ami-d53aff91",
-        "HVMebs": "ami-cd3aff89"
+        "PVinstancestore": "ami-377e5257",
+        "PVebs": "ami-347e5254",
+        "HVMebs": "ami-327f5352"
       },
       "eu-west-1": {
-        "PVinstancestore": "ami-8fbe93f8",
-        "PVebs": "ami-a3be93d4",
-        "HVMebs": "ami-69b9941e"
+        "PVinstancestore": "ami-81b8a3e7",
+        "PVebs": "ami-c4bba0a2",
+        "HVMebs": "ami-d7b9a2b1"
+      },
+      "ca-central-1": {
+        "HVMebs": "ami-a7aa15c3"
+      },
+      "eu-west-2": {
+        "HVMebs": "ed100689"
       },
       "eu-central-1": {
-        "PVinstancestore": "ami-a0aeaebd",
-        "PVebs": "ami-a6aeaebb",
-        "HVMebs": "ami-daaeaec7"
+        "PVinstancestore": "ami-24bd1b4b",
+        "PVebs": "ami-4dbc1a22",
+        "HVMebs": "ami-82be18ed"
       },
       "ap-southeast-1": {
-        "PVinstancestore": "ami-4c97821e",
-        "PVebs": "ami-50978202",
-        "HVMebs": "ami-52978200"
-      },
-      "ap-northeast-1": {
-        "PVinstancestore": "ami-a42fb8a4",
-        "PVebs": "ami-9c2fb89c",
-        "HVMebs": "ami-9a2fb89a"
+        "PVinstancestore": "ami-74af2017",
+        "PVebs": "ami-42901f21",
+        "HVMebs": "ami-77af2014"
       },
       "ap-northeast-2": {
-        "PVinstancestore": "ami-d14388bf",
-        "PVebs": "ami-2b408b45",
-        "HVMebs": "ami-2b408b45"
+        "HVMebs": "ami-e21cc38c"
+      },
+      "ap-northeast-1": {
+        "PVinstancestore": "ami-ded0c7b9",
+        "PVebs": "ami-d3d3c4b4",
+        "HVMebs": "ami-3bd3c45c"
       },
       "ap-southeast-2": {
-        "PVinstancestore": "ami-851856bf",
-        "PVebs": "ami-c71856fd",
-        "HVMebs": "ami-c11856fb"
+        "PVinstancestore": "ami-809383e3",
+        "PVebs": "ami-43918120",
+        "HVMebs": "ami-10918173"
+      },
+      "ap-south-1": {
+        "HVMebs": "ami-47205e28"
       },
       "sa-east-1": {
-        "PVinstancestore": "ami-010c991c",
-        "PVebs": "ami-370c992a",
-        "HVMebs": "ami-3b0c9926"
+        "PVinstancestore": "ami-98d9b2f4",
+        "PVebs": "ami-1cdab170",
+        "HVMebs": "ami-87dab1eb"
       },
       "cn-north-1": {
-        "PVinstancestore": "ami-7c15c111",
-        "PVebs": "ami-7c15c111",
-        "HVMebs": "ami-7c15c111"
+        "PVinstancestore": "ami-afd303c2",
+        "PVebs": "ami-2fd40442",
+        "HVMebs": "ami-afd303c2"
       }
     }
   },
@@ -591,7 +603,7 @@
                 "command": {
                   "Fn::Join": [
                     "",
-                      [
+                    [
                       "n=0;until [ $n -ge 5 ];do ",
                       {
                         "Fn::If": [
